--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Suwannaphum:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Suwannaphum:wght@400;700&display=swap');
 
+/* Color */
 :root {
     --white-color: #fff;
     --background-color-hover: #007B80;
     --main-color: #081223;
     --gray-color: #65606D;
     --background: #1B273D;
-    ;
 
+}
+
+/* Fonts */
+:root {
+    --Poppins-Font: Poppins;
+    --Suwannaphum-Font: Suwannaphum;
 
 }
 
@@ -58,13 +63,13 @@ nav ul li a.active {
 
 nav ul li a {
     color: var(--white-color) !important;
-    font-family: Poppins;
+    font-family: var(--Poppins-Font);
 }
 
 
 
 .nav-buttons a {
-    font-family: Poppins;
+    font-family: var(--Poppins-Font);
     color: var(--white-color) !important;
     font-size: 22px;
 
@@ -85,19 +90,19 @@ header .log-in {
 
 .hero .hero-content h1 {
     color: var(--white-color);
-    font-family: Suwannaphum;
+    font-family: var(--Suwannaphum-Font);
     font-size: 90px;
 }
 
 .hero .hero-content p {
     color: var(--white-color);
-    font-family: Poppins;
+    font-family:var(--Poppins-Font);
     font-size: 22px;
     margin: 36px 0;
 }
 
 .hero .hero-buttons {
-    font-family: Poppins;
+    font-family: var(--Poppins-Font);
     font-size: 22px;
 }
 
@@ -107,7 +112,7 @@ header .log-in {
 
 .hero-buttons .Learn {
     background-color: var(--background-color-hover);
-    font-family: Poppins;
+    font-family: var(--Poppins-Font);;
 }
 
 .hero .buttons .Learn:hover {
@@ -135,7 +140,7 @@ header .log-in {
 
 .service .service-title h2 {
     color: var(--main-color);
-    font-family: Suwannaphum;
+    font-family: var(--Suwannaphum-Font);
     font-size: 60px;
     font-weight: 700;
     line-height: 125%;
@@ -143,7 +148,7 @@ header .log-in {
 
 .service .service-title P {
     color: var(--gray-color);
-    font-family: Poppins;
+    font-family: var(--Poppins-Font);
     font-size: 22px;
     font-style: normal;
     font-weight: 500;
@@ -167,7 +172,7 @@ header .log-in {
 .service-card .card .card-body h5 {
     color: var(--main-color);
     text-align: center;
-    font-family: Suwannaphum;
+    font-family: var(--Suwannaphum-Font);
     font-size: 30px;
     font-style: normal;
     font-weight: 700;
@@ -178,7 +183,7 @@ header .log-in {
     margin: 30px 0;
     color: var(--gray-color);
     text-align: center;
-    font-family: Poppins;
+    font-family: var(--Poppins-Font);
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
@@ -202,7 +207,7 @@ header .log-in {
 
 .provide .provide-content h2 {
     color: var(--main-color);
-    font-family: Suwannaphum;
+    font-family: var(--Suwannaphum-Font);
     font-size: 60px;
     font-weight: 700;
     line-height: 125%;
@@ -211,7 +216,7 @@ header .log-in {
 
 .provide .provide-content p {
     color: var(--gray-color);
-    font-family: Poppins;
+    font-family: var(--Poppins-Font);
     font-size: 22px;
     font-style: normal;
     font-weight: 500;
@@ -244,7 +249,7 @@ header .log-in {
 
 .course .course-card .card .card-title {
     color: var(--main-color);
-    font-family: Suwannaphum;
+    font-family: var(--Suwannaphum-Font);
     font-size: 19px;
     font-style: normal;
     font-weight: 700;
@@ -253,8 +258,8 @@ header .log-in {
 }
 
 .course .course-card .card .card-text {
-    color: #6A6B6C;
-    font-family: Poppins;
+    color: var(--gray-color);
+    font-family: var(--Poppins-Font);
     font-size: 14px;
     font-style: normal;
     font-weight: 500;
@@ -281,7 +286,7 @@ header .log-in {
 }
 
 .swiper-pagination-bullet-active {
-    background: #fff
+    background: var(--white-color)
 }
 
 
@@ -299,7 +304,7 @@ header .log-in {
 
 .feedback .feedback-title h2 {
     color: var(--main-color);
-    font-family: Suwannaphum;
+    font-family: var(--Suwannaphum-Font);
     font-size: 60px;
     font-weight: 700;
     line-height: 125%;
@@ -308,7 +313,7 @@ header .log-in {
 
 .feedback .feedback-title P {
     color: var(--gray-color);
-    font-family: Poppins;
+    font-family: var(--Poppins-Font);
     font-size: 22px;
     font-style: normal;
     font-weight: 500;
@@ -321,7 +326,7 @@ header .log-in {
 .feedback-card .card {
     margin-top: 81px;
     border-radius: 10px;
-    background: #FFF;
+    background: var(--white-color);
     box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.10);
     border: none !important;
     padding: 30px;
@@ -337,7 +342,7 @@ header .log-in {
 
 .feedback-card .card .card-title {
     color: var(--main-color);
-    font-family: Suwannaphum;
+    font-family: var(--Suwannaphum-Font);
     font-size: 30px;
     font-style: normal;
     font-weight: 700;
@@ -346,7 +351,7 @@ header .log-in {
 
 .feedback-card .card .card-text {
     color: var(--gray-color);
-    font-family: Poppins;
+    font-family: var(--Poppins-Font);
     font-size: 22px;
     font-style: normal;
     font-weight: 500;
@@ -363,7 +368,7 @@ header .log-in {
 
 .feedback-card .card .card-footerr .footer-content span {
     color: var(--gray-color);
-    font-family: Poppins;
+    font-family: var(--Poppins-Font);
     font-size: 15px;
     font-style: normal;
     font-weight: 400;
@@ -410,10 +415,12 @@ footer {
     background-color: var(--background-color-hover) !important;
     padding: 3px 5px;
 }
+
 .footer .footer-right {
     display: flex;
-    gap:200px;
+    gap: 200px;
 }
+
 .footer .footer-right nav ul h4 {
     color: var(--white-color);
     font-weight: bold;
@@ -428,7 +435,7 @@ footer {
 }
 
 footer .copyright {
-    margin-top:100px;
+    margin-top: 100px;
 }
 
 
@@ -457,7 +464,7 @@ footer .copyright {
     }
 
     .nav-buttons a {
-        font-family: Poppins;
+        font-family: var(--Poppins-Font);
         color: var(--white-color) !important;
         font-size: 15px;
     }
@@ -563,23 +570,24 @@ footer .copyright {
         align-items: center;
         justify-content: center;
         flex-direction: column !important;
-       
-    
-    }
-    .footer .footer-left  {
-       display: flex;
-       flex-direction: column;
-       align-items: center;
-     
-       justify-content: center !important;
+
+
     }
 
-    .footer .footer-right{
-      display: flex;
-      flex-direction: column;
+    .footer .footer-left {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        justify-content: center !important;
+    }
+
+    .footer .footer-right {
+        display: flex;
+        flex-direction: column;
         align-items: center;
         text-align: center;
-        margin-right: 20px;
+        margin-right: 25px;
         margin-top: 50px;
         gap: 100px;
     }
