--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ header .log-in {
 
 .hero .hero-content p {
     color: var(--white-color);
-    font-family:var(--Poppins-Font);
+    font-family: var(--Poppins-Font);
     font-size: 22px;
     margin: 36px 0;
 }
@@ -112,7 +112,8 @@ header .log-in {
 
 .hero-buttons .Learn {
     background-color: var(--background-color-hover);
-    font-family: var(--Poppins-Font);;
+    font-family: var(--Poppins-Font);
+    ;
 }
 
 .hero .buttons .Learn:hover {
@@ -475,6 +476,7 @@ footer .copyright {
         padding: 80px 0 !important;
     }
 
+
     .hero .hero-content h1 {
 
         font-size: 30px;
@@ -487,7 +489,19 @@ footer .copyright {
 
     .hero .hero-content {
         flex-direction: column !important;
+        text-align: center !important;
+
     }
+
+    .hero .hero-content .hero-buttons {
+        
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+    }
+
+
 
     .hero .hero-content p {
         font-size: 10px;
